--- a/inst/doc/iSeq.Rnw
+++ b/inst/doc/iSeq.Rnw
@@ -64,7 +64,7 @@ that the bin is an enriched bin. Enriched bins are then merged into enriched reg
 
 \noindent
 For more information, we refer the user to Mo and Liang (2010 a, b) because the manuscript (Mo, 2010c) is still under 
-review.  The difference for modeling ChIP-chip and ChIP-seq data is at the first stage, where normal distributions
+review.  The major difference for modeling ChIP-chip and ChIP-seq data is at the first stage, where normal distributions
 are used for ChIP-chip data, and Poisson distributions are used for ChIP-seq data. 
 
 \section{The NRSF ChIP-seq Data}
@@ -98,7 +98,7 @@ print(mock[1:3,])
 \noindent
 We suggest building the signal profiles using a 50 bp window.  Use a small window size (e.g. 25 - 75 bp) in order to 
 precisely infer the true binding sites. If the sequenced DNA fragments are around 200 bp, it is expected that 
-an enriched region is made of 4 bins.  However, it the window size is too small, 
+an enriched region is made of 4 bins.  However, if the window size is too small, 
 it may lose power to detect enriched regions.
 <<echo=TRUE,print=FALSE>>=
 tagct = mergetag(chip=chip,control=mock,winsize=50)
@@ -121,7 +121,7 @@ print(reg0[1:3,]) # each row contain the information for an enriched region
 
 \subsection{Model the signal profiles using the iSeq1 function}
 \noindent 
-iSeq1 implements a fully Bayesian hidden Ising model in which the latent variable $X$ is modeled by 
+Function iSeq1 implements a fully Bayesian hidden Ising model in which the latent variable $X$ is modeled by 
 the standard 1D Ising model.  The columns 1-4 of tagct are the signal profiles for modeling.  
 Note that the column 4 is the adjusted tag counts of the ChIP samples. For one sample analysis, 
 it is the total tag counts for the forward and reverse chains. 
@@ -278,7 +278,7 @@ For the studies of transcription factor binding sites, if the posterior probabil
  or not dominated by 0, it suggests that the Ising model is not in the super-paramagnetic phase.  
 Only the super-paramagnetic phase reflects the binding events on the chromosomes.  
 Therefore, if the user use iSeq2, the user should increase the value of $k$ to let the phase transition occur so that
-the Ising model reach the super-paramagnetic phase. \\
+the Ising model reaches the super-paramagnetic phase. \\
 
 \noindent
 The iSeq methods take into account the spatial dependency, the global and local distributions of the sequence tags.   
@@ -301,6 +301,11 @@ dataList = list(chr22=tagct22,chrY=tagctY) \\
 sfInit(parallel=TRUE,cpus=2,type="SOCK") \\
 res=sfLapply(dataList,iSeq1,gap=300,burnin=100,sampling=200,ctcut=3,a0=1,b0=1,a1=1,b1=1,
   k0=3,mink=0,maxk=10,normsd=0.1,verbose=FALSE) \\
+
+\section{Citing iSeq}
+\noindent
+If you use iSeq package, please cite ``Mo, Q. (2010). A fully Bayesian hidden Ising model for ChIP-seq data analysis (Submitted).''
+
 <<echo=TRUE,print=TRUE>>=
 sessionInfo()
 @ 
