--- a/inst/doc/iSeq.Rnw
+++ b/inst/doc/iSeq.Rnw
@@ -42,30 +42,35 @@ The package can be used to analyze the ChIP-seq data with or without controls. \
 \noindent
 This package processes ChIP-seq data in three steps. \\
 \begin{itemize}
-\item {Build a signal profile for each chromosome.  To create the signal profiles, sequence tags are aggregated 
-into non-overlapping bins whose length can be decided by the user (e.g. 50 base pairs (bp)).  
-The number of tags falling each bin is counted.  The signal profiles are made of the bin-based tag counts and 
-the corresponding genomic positions on the chromosomes.  The bins and their tag counts are ordered along the chromosomes
-according to their genomic positions. }
-\item {Model the signal profiles.  It is to model the tag counts on the chromosomes.  The models assume that
-each bin is associated with a binary latent variable $X_i \in (1, -1)$, where $i$ denotes the ID for the bin, 
-and $X_i=1$ denotes that the bin is an enriched bin, and -1 for a non-enriched bin.  
-In the first stage, conditioning on the latent variable $X_i$, the bin-based tag counts are modeled by
-Poisson-Gamma distributions.  If $X_i=-1$, the tag count for bin $i$ is assumed to follow a Poisson distribution 
-with parameter $\lambda_0$, where $\lambda_0 \sim \textrm{Gamma}(a_0,b_0)$. If $X_i= 1$,  the tag count for 
-bin $i$ is assumed to follow a Poisson distribution with parameter $\lambda_1$, 
-where $\lambda_1 \sim \textrm{Gamma}(a_1,b_1)$. $\textrm{Gamma}(a,b)$ denotes a gamma distribution with mean 
-$a/b$ and variance $a/b^2$.  In the second stage, the latent variable is modeled by ferromagnetic Ising models.
-The Gibbs sampler and Metropolis algorithm are used to simulate from the posterior distributions of the model parameters.}
-\item {Call enriched regions.  The posterior probabilities for the bins in the enriched state ($X_i = 1$) are used 
-for statistical inference.  A bin with a high posterior probability in the enriched state will provide strong evidence 
-that the bin is enriched. Enriched bins are then merged into enriched regions.}  
+\item {Build a dynamic signal profile for each chromosome.  To create a dynamic signal profile, 
+    sequence tags are aggregated into non-overlapping dynamic bins whose lengths vary according to 
+    the tag density (See the help file of function 'mergetag').  The number of tags falling in each bin is counted.
+    A dynamic signal profile is made of the bin-based tag counts and the corresponding genomic positions on 
+    the chromosome.  The bins and their tag counts are ordered along the chromosome according to 
+    their genomic positions. }
+\item {Model the dynamic signal profiles.  It is to model the tag counts on the chromosome.  
+    The models assume that each bin is associated with a binary latent variable $X_i \in (1, -1)$, 
+    where $i$ denotes the ID for the bin, and $X_i=1$ denotes that the bin is an enriched bin, 
+    and -1 for a non-enriched bin. In the first stage, conditioning on the latent variable $X_i$, 
+    the bin-based tag counts are modeled by Poisson-Gamma distributions.  
+    If $X_i=-1$, the tag count for bin $i$ is assumed to follow a Poisson distribution 
+    with parameter $\lambda_0$, where $\lambda_0 \sim \textrm{Gamma}(a_0,b_0)$. 
+    If $X_i= 1$,  the tag count for bin $i$ is assumed to follow a Poisson distribution with 
+    parameter $\lambda_1$, where $\lambda_1 \sim \textrm{Gamma}(a_1,b_1)$. $\textrm{Gamma}(a,b)$ 
+    denotes a gamma distribution with mean $a/b$ and variance $a/b^2$.  In the second stage, 
+    the latent variable is modeled by ferromagnetic Ising models.  
+    The Gibbs sampler and Metropolis algorithm are used to simulate from the posterior 
+    distributions of the model parameters.}
+\item {Call enriched regions.  The posterior probabilities for the bins in the enriched state ($X_i = 1$) 
+    are used for statistical inference.  A bin with a high posterior probability in the enriched state 
+    will provide strong evidence that the bin is enriched. Enriched bins are then merged into 
+    enriched regions.}  
 \end{itemize}
 
 \noindent
 For more information, we refer the user to Mo and Liang (2010 a, b) because the manuscript (Mo, 2010c) is still under 
 review.  The major difference for modeling ChIP-chip and ChIP-seq data is at the first stage, where normal distributions
-are used for ChIP-chip data, and Poisson distributions are used for ChIP-seq data. 
+are used for ChIP-chip data, while Poisson distributions are used for ChIP-seq data. 
 
 \section{The NRSF ChIP-seq Data}
 
@@ -86,7 +91,7 @@ library(iSeq)
 data(nrsf)
 names(nrsf)
 @ 
-\subsection{Build the signal profiles using the mergetag function}
+\subsection{Build dynamic signal profiles using function 'mergetag'}
 \noindent
 The following two steps just merge the ChIP and control samples, respectively.
 <<echo=TRUE,print=FALSE>>=
@@ -96,30 +101,48 @@ print(chip[1:3,])
 print(mock[1:3,])
 @ 
 \noindent
-We suggest building the signal profiles using a 50 bp window.  Use a small window size (e.g. 25 - 75 bp) in order to 
-precisely infer the true binding sites. If the sequenced DNA fragments are around 200 bp, it is expected that 
-an enriched region is made of 4 bins.  However, if the window size is too small, 
-it may lose power to detect enriched regions.
+We suggest building the signal profiles using dynamic bins (80, 40, 20, 10 bp) and the threshold of 10 tags 
+for triggering bin size change for the NRSF data,  which is equivalent to setting maxlen=80,minlen=10 and 
+ntagcut=10 for the arguments of function 'megertag'.  Of course, the user can use other settings 
+according to the sequencing depth of the experiments.
+According to my experience, the dynamic profiles with bin sizes (80, 40, 20, 10 bp) work well for both deeply 
+and not-deeply sequenced data.  However, the users may need to adjust argument 'ntagcut' to reflect 
+the sequencing depth.  For example, for deeply sequenced data, the users may set ntagcut = 20, or 30, etc.
+In general, increasing the value of 'ntagcut' leads to bigger bin sizes used for building the dynamic profiles
+and less regions called enriched.  Note, by default, the bin sizes decrease or increase by a factor of 2,
+thus the user should set maxlen = ($2^n$)*minlen, where n is an integer.  
+
 <<echo=TRUE,print=FALSE>>=
-tagct = mergetag(chip=chip,control=mock,winsize=50)
+tagct = mergetag(chip=chip,control=mock,maxlen=80,minlen=10,ntagcut=10)
 print(tagct[1:3,])
 @ 
 \noindent
-See the help file for function 'mergetag' for the meanings of the tagct columns. 
+See the help file for function 'mergetag' for the meanings of the tagct columns. \\
  
 \noindent
 The user can quickly get the 'enriched' regions without calculating
-statistical confidence using function 'peakreg'.  For example, if we claim that a bin with adjusted tag count $>$ 10 is 
-an enriched bin,  the 'enriched' regions can be obtained by using the following code.  Let's use the chromosome 22 data as
-an example.  
+statistical confidence using function 'peakreg'.  For example, if we claim that a bin with 
+adjusted tag count $>$ 10 is an enriched bin,  the 'enriched' regions can be obtained by using 
+the following code.  Let's use the chromosome 22 data as an example.  
 <<echo=TRUE,print=FALSE>>=
 tagct22 = tagct[tagct[,1]=="chr22",]  #chr22 data 
-reg0 = peakreg(chrpos = tagct22[, 1:3], count = (tagct22[, 5:6] -tagct22[, 7:8]), pp = (tagct22[,4]>10),cutoff = 0, method = "ppcut",maxgap=300)
+reg0 = peakreg(chrpos = tagct22[, 1:3], count = (tagct22[, 5:6] -tagct22[, 7:8]), pp = (tagct22[,4]>10),cutoff = 0, method = "ppcut",maxgap=200)
 print(dim(reg0)) 
 print(reg0[1:3,]) # each row contain the information for an enriched region
 @ 
+Note the second argument 'count = ' is just used for inferring the predicted exact binding sites 
+(or peaks) of the enriched regions.  Here, we use the adjusted tag counts without truncating at 0. 
+The user can also just use the ChIP tag counts.  Usually it will not make much difference.  
+The last column (sym) in 'reg0' indicates whether the forward and reverse tag counts are symmetrical in the regions.
+It is to measure whether the regions are bimodal, which is a typical characteristic of binding regions. 
+The values range from 0.5 (the perfect symmetry) to 0 (asymmetry).  The user can order the regions 
+based on 'sym' and 'ct12' to get the 'top' binding regions.  For example, 
+<<echo=TRUE,print=FALSE>>=
+reg0 = reg0[order(reg0$sym,reg0$ct12,decreasing = TRUE),]
+print(reg0[1:5,]) # Top five regions
+@ 
 
-\subsection{Model the signal profiles using the iSeq1 function}
+\subsection{Model dynamic signal profiles using function 'iSeq1'}
 \noindent 
 Function iSeq1 implements a fully Bayesian hidden Ising model in which the latent variable $X$ is modeled by 
 the standard 1D Ising model.  The columns 1-4 of tagct are the signal profiles for modeling.  
@@ -127,7 +150,7 @@ Note that the column 4 is the adjusted tag counts of the ChIP samples. For one s
 it is the total tag counts for the forward and reverse chains. 
 <<echo=TRUE,print=FALSE>>=
 set.seed(777)
-res1 = iSeq1(Y=tagct22[,1:4],gap=300,burnin=200,sampling=1000,ctcut=3,a0=1,b0=1,a1=5,b1=1,
+res1 = iSeq1(Y=tagct22[,1:4],gap=200,burnin=200,sampling=1000,ctcut=0.95,a0=1,b0=1,a1=5,b1=1,
   k0=3,mink=0,maxk=10,normsd=0.1,verbose=FALSE)
 @ 
 
@@ -148,7 +171,7 @@ plot(res1$lambda1, pch=".", xlab="Iterations", ylab="lambda1")
 \noindent
 From the trace plots, we see the chains converge quite fast.  
 
-\subsection{Call the enriched regions detected by iSeq1 using the peakreg function}
+\subsection{Call enriched regions detected by iSeq1 using function 'peakreg'}
 \noindent
 Call the enriched regions detected by iSeq1 using 0.5 posterior probability (pp) cutoff.  
 Note the argument count is the net tag counts for the two sample analysis.   
@@ -157,7 +180,7 @@ doesn't matter because it is just used for inferring the center of the enriched 
 which is usually the true binding site.  The user can also use the ChIP tag counts only.  
 The results are little different. See the help file of peakreg for details. 
 <<echo=TRUE,print=FALSE>>=
-reg1 = peakreg(chrpos=tagct22[,1:3],count=(tagct22[,5:6]-tagct22[,7:8]),pp=res1$pp,cutoff=0.5,method="ppcut",maxgap=300)
+reg1 = peakreg(chrpos=tagct22[,1:3],count=(tagct22[,5:6]-tagct22[,7:8]),pp=res1$pp,cutoff=0.5,method="ppcut",maxgap=200)
 print(dim(reg1))
 print(reg1[1:3,])
 @ 
@@ -183,7 +206,7 @@ for(i in 1:4){
 Call the enriched regions using 0.05 FDR cutoff.  The FDR is calculated
 using a direct posterior probability approach (Newton et al., 2004). 
 <<echo=TRUE,print=FALSE>>=
-reg2 = peakreg(tagct22[,1:3],tagct22[,5:6]-tagct22[,7:8],res1$pp,0.05,method="fdrcut",maxgap=300)
+reg2 = peakreg(tagct22[,1:3],tagct22[,5:6]-tagct22[,7:8],res1$pp,0.05,method="fdrcut",maxgap=200)
 print(dim(reg2))
 print(reg2[1:3,])
 
@@ -197,7 +220,7 @@ the enriched regions.  For example,
 bed = data.frame(chr=reg2[,1],gstart=reg2[,6]-100,gend=reg2[,6]+100)
 @ 
 
-\subsection{Model the signal profiles using the iSeq2 function}
+\subsection{Model dynamic signal profiles using function 'iSeq2' }
 \noindent
 The latent variable $X$ can be modeled through a high-order Ising model using function iSeq2. 
 The interaction parameter $k$ for the high-order (or the standard/first-order) Ising model is fixed 
@@ -211,7 +234,7 @@ setting a stringent criterion for detecting enriched regions.
 \noindent
 Model the NRSF data using the second-order Ising model. 
 <<echo=TRUE,print=FALSE>>=
-res2 = iSeq2(Y=tagct22[,1:4],gap=300, burnin=100,sampling=500,winsize=2,ctcut=5,
+res2 = iSeq2(Y=tagct22[,1:4],gap=200, burnin=100,sampling=500,winsize=2,ctcut=0.95,
   a0=1,b0=1,a1=5,b1=1,k=1.0,verbose=FALSE)
 @ 
 
@@ -227,9 +250,9 @@ plot(res2$lambda1, pch=".", xlab="Iterations", ylab="lambda1")
 @
 \end{center}
 
-\subsection{Call the enriched regions detected by iSeq2 using the peakreg function}
+\subsection{Call enriched regions detected by iSeq2 using function 'peakreg'}
 <<echo=TRUE,print=FALSE>>=
-reg2 = peakreg(tagct22[,1:3],tagct22[,5:6],res2$pp,0.5,method="ppcut",maxgap=300)
+reg2 = peakreg(tagct22[,1:3],tagct22[,5:6],res2$pp,0.5,method="ppcut",maxgap=200)
 print(dim(reg2))
 print(reg2[1:3,])
 @ 
@@ -253,9 +276,9 @@ chromosome Y.
 <<echo=TRUE,print=FALSE>>=
 tagctY = tagct[tagct[,1]=="chrY",]
 print(table(tagctY[,4]))
-res1 = iSeq1(Y=tagctY[,1:4],gap=300,burnin=1000,sampling=5000,ctcut=3,a0=1,b0=1,a1=5,b1=1,
+res1 = iSeq1(Y=tagctY[,1:4],gap=200,burnin=1000,sampling=5000,ctcut=0.95,a0=1,b0=1,a1=5,b1=1,
   k0=3,mink=0,maxk=10,normsd=0.5,verbose=FALSE)
-res2 = iSeq2(Y=tagctY[,1:4],gap=300, burnin=1000,sampling=5000,winsize=2,ctcut=3,
+res2 = iSeq2(Y=tagctY[,1:4],gap=200, burnin=1000,sampling=5000,winsize=2,ctcut=0.95,
   a0=1,b0=1,a1=5,b1=1,k=3.0,verbose=FALSE)
 @ 
 
@@ -274,20 +297,26 @@ In this case, all the bins are only in the non-enriched state and the posterior 
 In some cases, if the $\lambda_1$ is small (e.g. $\approx a_1/b_1$, the mean value of the gamma prior), it suggests that
 there is no enriched region on that chromosome.  The user may not claim any enriched regions found on that chromosome, 
 even if some posterior probabilities are high.  
-For the studies of transcription factor binding sites, if the posterior probabilities are not dichotomized 
- or not dominated by 0, it suggests that the Ising model is not in the super-paramagnetic phase.  
-Only the super-paramagnetic phase reflects the binding events on the chromosomes.  
-Therefore, if the user use iSeq2, the user should increase the value of $k$ to let the phase transition occur so that
-the Ising model reaches the super-paramagnetic phase. \\
 
 \noindent
-The iSeq methods take into account the spatial dependency, the global and local distributions of the sequence tags.   
-If the signal profiles have very sparse signals and some bins have very large (adjusted) tag counts (e.g., the NRSF data), 
-the estimated $\lambda_1$ will be relatively large, which makes the bins with relatively small counts (e.g., tens) have
-low posterior probabilities.  In this case, the user can truncate
-the (adjusted) tag counts at certain value (e.g., if count $>$ 100, set count = 100) to increase the power to detect 
-the regions with small tag counts.  For the NRSF data, if the adjusted tag counts are truncated at 100, more enriched
-regions can be detected.  
+According to my experience, iSeq1 methods work well for most of ChIP-seq data I have analyzed.  
+For very noisy data, iSeq1 may not work.  The parameter $\lambda_1$ estimates for very noisy data 
+are usually less than 1 and the posterior probabilities are not dichotomized and dominated by 0,
+which suggest that the Ising model is not in the super-paramagnetic phase.  
+Only the super-paramagnetic phase reflects the binding events on the chromosomes.  
+Therefore, if iSeq1 doesn't work, the user can use iSeq2.  In iSeq2 function, 
+the interaction parameter $k$ is fixed by the user.  
+The user can increase the value of $k$ to let the phase transition occur so that
+the Ising model reaches the super-paramagnetic phase. \\
+
+%\noindent
+%The iSeq methods take into account the spatial dependency, the global and local distributions of the sequence tags.   
+%If the signal profiles have very sparse signals and some bins have very large (adjusted) tag counts (e.g., the NRSF data), 
+%the estimated $\lambda_1$ will be relatively large, which makes the bins with relatively small counts (e.g., tens) have
+%low posterior probabilities.  In this case, the user can truncate
+%the (adjusted) tag counts at certain value (e.g., if count $>$ 100, set count = 100) to increase the power to detect 
+%the regions with small tag counts.  For the NRSF data, if the adjusted tag counts are truncated at 100, more enriched
+%regions can be detected.  
 
 \section{Parallel Computation}
 \noindent
@@ -299,7 +328,7 @@ library(snow) \\
 library(snowfall)  \\ 
 dataList = list(chr22=tagct22,chrY=tagctY) \\
 sfInit(parallel=TRUE,cpus=2,type="SOCK") \\
-res=sfLapply(dataList,iSeq1,gap=300,burnin=100,sampling=200,ctcut=3,a0=1,b0=1,a1=1,b1=1,
+res=sfLapply(dataList,iSeq1,gap=200,burnin=100,sampling=200,ctcut=0.95,a0=1,b0=1,a1=1,b1=1,
   k0=3,mink=0,maxk=10,normsd=0.1,verbose=FALSE) \\
 
 \section{Citing iSeq}
@@ -314,12 +343,12 @@ sessionInfo()
 \bibitem[\protect\citeauthoryear{Mo and Liang.}{2010}]{mo2010a}
 Mo, Q., Liang, F. (2010a).
 Bayesian Modeling of ChIP-chip data through a high-order Ising Model.  
-{\it Biometrics}, 2010 Jan 29 [Epub ahead of print]. DOI: 10.1111/j.1541-0420.2009.01379.x
+{\it Biometrics} {\bf 66}, 1284-1294.
 
 \bibitem[\protect\citeauthoryear{Mo and Liang.}{2010}]{mo2010b}
 Mo, Q., Liang, F. (2010b).
 A hidden Ising model for ChIP-chip data analysis.  
-{\it Bioinformatics} {\bf 26(6)}, 777-783. doi:10.1093/bioinformatics/btq032
+{\it Bioinformatics} {\bf 26(6)}, 777-783.
 
 \bibitem[\protect\citeauthoryear{Mo}{2010}]{mo2010c}
 Mo, Q. (2010). A fully Bayesian hidden Ising model for ChIP-seq data analysis. (Submitted). 
