--- a/inst/doc/iSeq.Rnw
+++ b/inst/doc/iSeq.Rnw
@@ -350,8 +350,9 @@ Mo, Q., Liang, F. (2010b).
 A hidden Ising model for ChIP-chip data analysis.  
 {\it Bioinformatics} {\bf 26(6)}, 777-783.
 
-\bibitem[\protect\citeauthoryear{Mo}{2010}]{mo2010c}
-Mo, Q. (2010). A fully Bayesian hidden Ising model for ChIP-seq data analysis. (Submitted). 
+\bibitem[\protect\citeauthoryear{Mo}{2011}]{mo2011}
+Mo, Q. (2011). A fully Bayesian hidden Ising model for ChIP-seq data analysis. 
+{\it Biostatistics}, Advance Access published September 13, 2011. doi:10.1093/biostatistics/kxr029
 
 \bibitem[\protect\citeauthoryear{Newton et al.}{2004}]{new04}
 Newton, M., Noueiry, A., Sarkar, D., Ahlquist, P. (2004). Detecting differential gene expression with a semiparametric
